--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -422,7 +422,7 @@
 }
 .title{
   font-weight: 800;
-  color: #070b0c;
+  color: #36a9cc;
 }
 
 .about .container .card1 .img {
@@ -469,7 +469,7 @@
 .resume:hover{
   cursor: pointer;
   transform: translate(-2px,2px);
-  -webkit-box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.445), -2px -2px 8px #003137a4;
+  -webkit-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.445), -2px -2px 8px #003140a4;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.445), -2px -2px 8px #003140a4;
   font-weight: 700;
 }
@@ -857,9 +857,7 @@ a:hover{
   width: 34px;
   height: 34px;
 }
-#smallbox {
-    cursor: pointer;
-}
+
 h1{
   display: table-cell;
   vertical-align: middle;
@@ -1016,112 +1014,4 @@ background: #125688;
 color: #125688;
 background: #fefefe;
 border-color: #125688;
-}
-
-
-
-/* Timeline Container */
-.timeline {
-  background: var(--primary-color);
-  margin: 20px auto;
-  padding: 20px;
-}
-
-/* Card container */
-.cardd {
-  position: relative;
-  max-width: 400px;
-}
-
-/* setting padding based on even or odd */
-.cardd:nth-child(odd) {
-  padding: 30px 0 30px 30px;
-}
-.cardd:nth-child(even) {
-  padding: 30px 30px 30px 0;
-}
-/* Global ::before */
-.cardd::before {
-  content: "";
-  position: absolute;
-  width: 50%;
-  border: solid #082a6175;;
-}
-
-/* Setting the border of top, bottom, left */
-.cardd:nth-child(odd)::before {
-  left: 0px;
-  top: -4.5px;
-  bottom: -4.5px;
-  border-width: 5px 0 5px 5px;
-  border-radius: 50px 0 0 50px;
-}
-
-/* Setting the border of top, bottom, right */
-.cardd:nth-child(even)::before {
-  right: 0;
-  top: 0;
-  bottom: 0;
-  border-width: 5px 5px 5px 0;
-  border-radius: 0 50px 50px 0;
-}
-
-/* Removing the border if it is the first card */
-.cardd:first-child::before {
-  border-top: 0;
-  border-top-left-radius: 0;
-}
-
-/* Removing the border if it is the last card  and it's odd */
-.cardd:last-child:nth-child(odd)::before {
-  border-bottom: 0;
-  border-bottom-left-radius: 0;
-}
-
-/* Removing the border if it is the last card  and it's even */
-.cardd:last-child:nth-child(even)::before {
-  border-bottom: 0;
-  border-bottom-right-radius: 0;
-}
-
-/* Information about the timeline */
-.info {
-  display: flex;
-  flex-direction: column;
-  background: #003140;
-  color: rgb(218, 218, 218);
-  border-radius: 10px;
-  padding: 10px;
-}
-
-/* Title of the card */
-.titlee {
-  color: rgb(165, 164, 164);
-  position: relative;
-}
-
-/* Timeline dot  */
-.titlee::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: white;
-  border-radius: 999px;
-  border: 3px solid rgb(2, 10, 131);
-}
-
-/* text right if the card is even  */
-.cardd:nth-child(even) > .info > .titlee {
-  text-align: right;
-}
-
-/* setting dot to the left if the card is odd */
-.cardd:nth-child(odd) > .info > .titlee::before {
-  left: -45px;
-}
-
-/* setting dot to the right if the card is odd */
-.cardd:nth-child(even) > .info > .titlee::before {
-  right: -45px;
 }
